# VegeSSL

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
config/: __init__.py  config.py  default.yaml
data/: .gitkeep
docs/: methodology.md
evaluation/: __init__.py  detect_errors.py  visualize.py
experiments/: __init__.py  train_stage1.py  train_stage2.py
output/: .gitkeep
vegessl/: __init__.py  datasets.py  losses.py  models.py  utils.py
